--- a/data.Rmd
+++ b/data.Rmd
@@ -1,6 +1,42 @@
-{\rtf1\ansi\ansicpg936\cocoartf2822
-\cocoatextscaling0\cocoaplatform0{\fonttbl}
-{\colortbl;\red255\green255\blue255;}
-{\*\expandedcolortbl;;}
-\paperw11900\paperh16840\margl1440\margr1440\vieww11520\viewh8400\viewkind0
-}
+---
+title: "Dataset Introduction"
+output:
+  html_document:
+    theme: flatly
+    highlight: textmate
+    toc: true
+    toc_float: true
+    code_folding: hide
+---
+
+## 1. Dataset Overview
+
+This dataset captures **short-form video performance** across **YouTube Shorts** and **TikTok** platforms during 2025. It contains over 50,000 video records designed for analysis of engagement dynamics, cultural patterns, and content trends in the short-form video landscape.
+
+**Key Characteristics:**
+
+- **Time Period:** 2025 (Jan-Aug, with synthetic dates clipped to 2025-09-12)
+
+- **Platforms:** TikTok and YouTube Shorts
+
+- **Records:** ~48,000-50,000 videos
+
+- **Geography:** Global coverage with country-level granularity (ISO-2 codes)
+
+- **Languages:** Multiple, with English as fallback
+
+- **Features:** 58 columns in raw format, 32 in ML-ready format
+
+## 2. Available Files
+
+| File | Description | Shape | Purpose |
+|------|-------------|-------|---------|
+| `youtube_shorts_tiktok_trends_2025.csv` | Raw video-level data | ~48k × 58 | Comprehensive analysis |
+| `youtube_shorts_tiktok_trends_2025_ml.csv` | ML-ready cleaned version | ~50k × 32 | Machine learning modeling |
+| `monthly_trends_2025.csv` | Monthly aggregates | ~480 × 8 | Time-series analysis |
+| `country_platform_summary_2025.csv` | Country × platform summaries | ~60 × 14 | Regional comparisons |
+| `top_hashtags_2025.csv` | Trending hashtags ranking | ~82 × 18 | Content trend analysis |
+| `top_creators_impact_2025.csv` | Creator-level metrics | ~1,000 × 20 | Influencer analysis |
+| `DATA_DICTIONARY.csv` | Column definitions | ~58 × 2 | Feature reference |
+
+[Next: Completion Rate EDA →](topic1.html)
