--- a/regression_analysis.Rmd
+++ b/regression_analysis.Rmd
@@ -418,3 +418,5 @@ cv_df |>
 ```
 
 The plot above shows the RMSE distribution for the Linear Model, Smooth GAM, and Wiggly GAM. It indicates that the Linear Model and Smooth GAM achieve lower and more stable prediction errors, while the Wiggly GAM shows higher and more variable RMSE values. Overall, the Linear Model and Smooth GAM generalize better than the Wiggly GAM, both in accuracy and stability. 
+
+[Next: Trend Prediction →](topic2.html)
