--- a/topic1.Rmd
+++ b/topic1.Rmd
@@ -2,7 +2,7 @@
 title: "EDA for Completion Rate"
 output:
   html_document:
-    theme: united
+    theme: flatly
     toc: true
     toc_float: true
     df_print: paged
